[gd_scene load_steps=4 format=3 uid="uid://cic2krxnfcl35"]

[ext_resource type="Texture2D" uid="uid://dsqdugm2hdyv5" path="res://assets/CardTemplate.png" id="1_d81rb"]
[ext_resource type="Script" uid="uid://bfw1ql2hexj72" path="res://scripts/card.gd" id="2_6u4wf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6u4wf"]
bg_color = Color(0.890196, 0.678431, 0.529412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Card" type="Control"]
custom_minimum_size = Vector2(140, 210)
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_6u4wf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6u4wf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardArt" type="TextureRect" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("1_d81rb")
expand_mode = 5
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
